# PIAIC

./: .gitignore  README.md
Q1_AI-101_Modern_AI_Python_Programming/assignment_1/: Assignment 1.md
Q1_AI-101_Modern_AI_Python_Programming/assignment_2/: Assignment 2.md
Q1_AI-101_Modern_AI_Python_Programming/assignment_4/: 04_Python_Crash_Course_Ch2_Ch3_Ch4_Practice_OmairJaswal.ipynb  Assignment 4.md
Q1_AI-101_Modern_AI_Python_Programming/assignment_5/: Assignment 5.md
Q1_AI-101_Modern_AI_Python_Programming/assignment_6/: 06_Python_Crash_Course_Practice_Mini_Project_Omair_Jaswal.ipynb  Assignment 6.md
Q2_AI-201_Fundamentals_of_Agentic_AI/assignment_1/: n8n_NASA_Solar_Flare_Alert.json
Q2_AI-201_Fundamentals_of_Agentic_AI/assignment_1/assignment/: README.md
Q2_AI-201_Fundamentals_of_Agentic_AI/assignment_2/uv-assignment/: .gitignore  README.md
Q2_AI-201_Fundamentals_of_Agentic_AI/assignment_2/uv-assignment/packaged-app/: README.md  pyproject.toml
Q2_AI-201_Fundamentals_of_Agentic_AI/assignment_2/uv-assignment/packaged-app/src/packaged_app/: main.py
Q2_AI-201_Fundamentals_of_Agentic_AI/assignment_2/uv-assignment/simple-app/: README.md  main.py  pyproject.toml
Q2_AI-201_Fundamentals_of_Agentic_AI/assignment_3/assignment/: Nathan's workflow.json  README.md
Q2_AI-201_Fundamentals_of_Agentic_AI/assignment_4/hello-agent-assignment/: .gitignore
Q2_AI-201_Fundamentals_of_Agentic_AI/assignment_4/hello-agent-assignment/packaged-agent/: .env.example  pyproject.toml
Q2_AI-201_Fundamentals_of_Agentic_AI/assignment_4/hello-agent-assignment/simple-agent/: main.py  pyproject.toml
q1/assignment_3/: 03_Python_Crash_Course_Ch2_Ch3_Practice_OmairJaswal.ipynb  Python_Crash_Course_Ch2_Ch3_Practice_OmairJaswal.md
q1/assignment_4/: 04_Python_Crash_Course_Ch2_Ch3_Ch4_Practice_OmairJaswal.md
q1/assignment_5/: 05_Python_Crash_Course_Practice_Ch1-4_OmairJaswal.ipynb  05_Python_Crash_Course_Practice_Ch1-4_OmairJaswal.md
q1/assignment_7/: 07_Python_Crash_Course_Practice_Mini_Project_Omair_Jaswal.ipynb  Assignment 7.md
(+1 files in other folders)
