[project]
name = "packaged-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Omair Jaswal", email = "OmairAJ@users.noreply.github.com" }
]
requires-python = ">=3.13"
dependencies = []

[project.scripts]
packaged-app = "packaged_app:main"

[build-system]
requires = ["uv_build>=0.8.15,<0.9.0"]
build-backend = "uv_build"
