[project]
name = "packaged-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Omair Jaswal", email = "OmairAJ@users.noreply.github.com" }
]
requires-python = ">=3.13"
dependencies = []

[project.scripts]
packaged-app = "packaged_app:main"
packaged-app-main = "packaged_app.main:main"

[build-system]
requires = ["uv_build>=0.8.15,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "black>=25.1.0",
    "mypy>=1.17.1",
    "ruff>=0.12.12",
]
